FIX: remove width: 100%, align table in center, add min-width: 90%, max-width: 100%

--- a/scss/gotable.scss
+++ b/scss/gotable.scss
@@ -63,9 +63,10 @@ div.rpt-table-container {
     table {
         border-collapse: collapse;
         table-layout: fixed;
-        margin: 0;
+        margin: 0 auto;
         padding: 0;
-        width: 100%;
+        min-width: 90%;
+        max-width: 100%;
 
         td, th {
             padding: $table-cell-padding;
